--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require": {
         "php": ">=5.4",
         "composer/installers": "1.*",
-        "johnpbloch/wordpress": "4.7.2"
+        "johnpbloch/wordpress": "*",
     },
     "extra": {
         "wordpress-install-dir": "wp",
