--- a/composer.json
+++ b/composer.json
@@ -3,20 +3,25 @@
         {
             "type": "composer",
             "url": "https://wpackagist.org"
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/dss-web/dss-wordpress-theme.git",
+            "reference": "master"
         }
     ],
     "require": {
         "php": ">=5.4",
         "composer/installers": "1.*",
         "johnpbloch/wordpress": "*",
+        "dss-web/dss-wordpress-theme": "*"
     },
     "extra": {
         "wordpress-install-dir": "wp",
         "installer-paths": {
             "content/mu-plugins/{$name}/": ["type:wordpress-muplugin"],
             "content/plugins/{$name}/": ["type:wordpress-plugin"],
-            "content/themes/{$name}/": ["type:wordpress-theme"]
+            "content/themes/{$name}/": ["type:wordpress-theme" ]
         }
     }
 }
-
