--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,30 @@
             "type": "git",
             "url": "https://github.com/dss-web/dss-wordpress-theme.git",
             "reference": "master"
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "advanced-custom-fields/advanced-custom-fields-pro",
+                "version": "5.6.1",
+                "type": "wordpress-plugin",
+                "dist": {
+                    "type": "zip",
+                    "url": "https://connect.advancedcustomfields.com/index.php?p=pro&a=download"
+                },
+                "require": {
+                    "philippbaschke/acf-pro-installer": "^1.0",
+                    "composer/installers": "^1.0"
+                }
+            }
         }
     ],
     "require": {
         "php": ">=5.4",
         "composer/installers": "1.*",
         "johnpbloch/wordpress": "*",
-        "dss-web/dss-wordpress-theme": "*"
+        "dss-web/dss-wordpress-theme": "*",
+        "advanced-custom-fields/advanced-custom-fields-pro": "5.*"
     },
     "extra": {
         "wordpress-install-dir": "wp",
