--- a/composer.json
+++ b/composer.json
@@ -38,9 +38,7 @@
         "dss-web/dss-wordpress-theme": "*",
         "dss-web/dss-wp-events": "*",
         "advanced-custom-fields/advanced-custom-fields-pro": "5.*",
-        "wpackagist-plugin/user-switching": "*",
-        "wp-cli/wp-cli" : "*",
-        "psy/psysh" : "~0.6"
+        "wpackagist-plugin/user-switching": "*"
     },
     "extra": {
         "wordpress-install-dir": "wp",
@@ -51,7 +49,7 @@
         }
     },
     "scripts": {
-        "post-install-cmd": "\"vendor/bin/wp\" plugin activate --all",
-        "post-update-cmd" : "\"vendor/bin/wp\" plugin activate --all"
+        "post-install-cmd": "wp plugin activate --all",
+        "post-update-cmd" : "wp plugin activate --all"
     }
 }
