Add post-install-cmd to install the WP multisite and activate the theme

--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
         }
     },
     "scripts": {
-        "post-install-cmd": "wp plugin activate --all",
+        "post-install-cmd": "wp core multisite-install --prompt && wp plugin activate --all && wp theme activate dss-wordpress-theme",
         "post-update-cmd" : "wp plugin activate --all"
     }
 }
