Add the TeamCity extension to CodeCeption

--- a/testing/codeception.yml
+++ b/testing/codeception.yml
@@ -8,6 +8,7 @@ actor_suffix: Tester
 extensions:
     enabled:
         - Codeception\Extension\RunFailed
+        - Codeception\Extension\TeamCity
     commands:
         - Codeception\Command\GenerateWPUnit
         - Codeception\Command\GenerateWPRestApi
