--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,12 @@
             "url": "https://wpackagist.org"
         },
         {
-            "type": "git",
+            "type": "vcs",
             "url": "git@github.com:dss-web/dss-wordpress-theme.git",
             "reference": "master"
         },
         {
-            "type": "git",
+            "type": "vcs",
             "url": "git@github.com:dss-web/dss-wp-events.git",
             "reference": "master"
         },
