--- a/composer.json
+++ b/composer.json
@@ -34,11 +34,22 @@
     "require": {
         "php": ">=5.4",
         "composer/installers": "1.*",
-        "johnpbloch/wordpress": "*",
         "dss-web/dss-wordpress-theme": "*",
         "dss-web/dss-wp-events": "*",
         "advanced-custom-fields/advanced-custom-fields-pro": "5.*",
-        "wpackagist-plugin/user-switching": "*"
+        "wpackagist-plugin/user-switching": "*",
+		"wpackagist-plugin/advanced-custom-fields": "*",
+		"wpackagist-plugin/simple-comment-editing": "*",
+		"wpackagist-plugin/mce-table-buttons": "*",
+		"wpackagist-plugin/contact-form-7": "*",
+		"wpackagist-plugin/metronet-profile-picture": "*",
+		"wpackagist-plugin/post-thumbnail-editor": "*",
+		"wpackagist-plugin/mailgun": "*",
+		"wpackagist-plugin/visual-term-description-editor": "*",
+		"wpackagist-plugin/metronet-reorder-posts": "*",
+		"wpackagist-plugin/breadcrumb-navxt": "*",
+		"wpackagist-plugin/breadcrumb-navxt-multidimension-extensions": "*",
+		"wpackagist-plugin/flexible-posts-widget": "*"
     },
     "extra": {
         "wordpress-install-dir": "wp",
