--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,25 @@
                     "composer/installers": "^1.0"
                 }
             }
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "humanmade/mercator-sso",
+                "version": "5.6.1",
+                "type": "wordpress-muplugin",
+                "dist": {
+                    "type": "git",
+                    "url": "https://github.com/humanmade/Mercator-SSO",
+					"extra": {
+				        "installer-name": "mercator-sso"
+				    }
+                },
+                "require": {
+                    "humanmade/mercator": "^1.0",
+                    "composer/installers": "^1.0"
+                }
+            }
         }
     ],
     "require": {
