--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         {
             "type": "package",
             "package": {
-                "name": "humanmade/mercator-sso",
+                "name": "mercator",
                 "version": "5.6.1",
                 "type": "wordpress-muplugin",
                 "dist": {
@@ -55,6 +55,7 @@
         "composer/installers": "1.*",
         "dss-web/dss-wordpress-theme": "*",
         "dss-web/dss-wp-events": "*",
+		"mercator": "*",
         "advanced-custom-fields/advanced-custom-fields-pro": "5.*",
         "wpackagist-plugin/user-switching": "*",
 		"wpackagist-plugin/advanced-custom-fields": "*",
