--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,8 @@
                 "version": "5.6.1",
                 "type": "wordpress-muplugin",
                 "dist": {
-                    "type": "git",
-                    "url": "https://github.com/humanmade/Mercator-SSO",
+                    "type": "zip",
+                    "url": "https://github.com/humanmade/Mercator-SSO/archive/master.zip",
 					"extra": {
 				        "installer-name": "mercator-sso"
 				    }
