--- a/composer.json
+++ b/composer.json
@@ -34,17 +34,28 @@
             "type": "package",
             "package": {
                 "name": "mercator",
-                "version": "5.6.1",
+                "version": "^1.0",
                 "type": "wordpress-muplugin",
                 "dist": {
                     "type": "zip",
-                    "url": "https://github.com/humanmade/Mercator-SSO/archive/master.zip",
-					"extra": {
-				        "installer-name": "mercator-sso"
-				    }
+                    "url": "https://github.com/humanmade/Mercator/archive/master.zip"
                 },
                 "require": {
-                    "humanmade/mercator": "^1.0",
+                    "composer/installers": "^1.0"
+                }
+            }
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "mercator-sso",
+                "version": "^1.0",
+                "type": "wordpress-muplugin",
+                "dist": {
+                    "type": "zip",
+                    "url": "https://github.com/humanmade/Mercator-SSO/archive/master.zip"
+                },
+                "require": {
                     "composer/installers": "^1.0"
                 }
             }
@@ -56,6 +67,7 @@
         "dss-web/dss-wordpress-theme": "*",
         "dss-web/dss-wp-events": "*",
 		"mercator": "*",
+		"mercator-sso": "*",
         "advanced-custom-fields/advanced-custom-fields-pro": "5.*",
         "wpackagist-plugin/user-switching": "*",
 		"wpackagist-plugin/advanced-custom-fields": "*",
