--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
             "type": "package",
             "package": {
                 "name": "mercator",
-                "version": "^1.0",
+                "version": "1.0.1",
                 "type": "wordpress-muplugin",
                 "dist": {
                     "type": "zip",
@@ -49,7 +49,7 @@
             "type": "package",
             "package": {
                 "name": "mercator-sso",
-                "version": "^1.0",
+                "version": "1.0.1",
                 "type": "wordpress-muplugin",
                 "dist": {
                     "type": "zip",
